@startuml
interface IDisplayStaffView {
    +  <<event>> Add : EventHandler? 
    +  <<event>> Edit : EventHandler? 
    +  <<event>> ArchiveToggled : EventHandler? 
    +  <<event>> ShowArchivedChanged : EventHandler? 
    +  <<event>> Search : EventHandler? 
    +  <<event>> SelectionChanged : EventHandler? 
    +  <<event>> SortRequested : EventHandler<SortRequestEventArgs>? 
    + SearchText : string <<get>> <<set>>
    + DataGridText : string <<set>>
    + ShowArchivedItems : bool <<get>>
    + SelectedItemArchived : bool <<set>> <<get>>
    + DisableAll() : void
    + EnableAll() : void
    + ShowMessageBox(text:string, caption:string, buttons:MessageBoxButtons) : DialogResult
}
class "IDisplayView`1"<T> {
}
IChildView <|-- IDisplayStaffView
"IDisplayView`1" "<DisplayStaffModel>" <|-- IDisplayStaffView
IDisplayStaffView --> "SelectedItem" DisplayStaffModel
@enduml
